--- a/server/config.example.env
+++ b/server/config.example.env
@@ -8,8 +8,15 @@ SERVER_NAME=EspacoPessoal Docs Server
 MAX_CONNECTIONS=100
 TIMEOUT=30000
 
-# CORS Settings (allow Vercel domain)
-CORS_ORIGIN=https://docs.espacopessoal.com
+# CORS Settings - Support multiple origins (comma-separated)
+# For production, specify your exact domains
+CORS_ORIGIN=https://docs.espacopessoal.com,https://espacopessoal-v2.vercel.app,https://www.espacopessoal.com
+
+# For development, you can use wildcard (NOT recommended for production)
+# CORS_ORIGIN=*
+
+# Or for local development only
+# CORS_ORIGIN=http://localhost:3000,http://localhost:3001,https://docs.espacopessoal.com
 
 # Database Configuration (if using extensions)
 # DATABASE_URL=postgresql://user:password@host:port/database
