Remove Vercel deployment guide and example server configuration. Update client dependencies and ESLint rules. Enhance Tailwind CSS configuration with new color variables. Refactor main layout and page components to integrate Convex client and improve document management features.

--- a/client/vercel.example.env
+++ b/client/vercel.example.env
@@ -7,12 +7,14 @@ NEXT_PUBLIC_APP_URL=https://docs.espacopessoal.com
 NEXT_PUBLIC_PORT=3000
 
 # WebSocket Configuration (IMPORTANT: Use WSS for HTTPS sites)
-NEXT_PUBLIC_WS_URL=wss://socket.espacopessoal.com:6001
+# After Coolify SSL is configured, use the domain with wss://
+NEXT_PUBLIC_WS_URL=wss://socket.espacopessoal.com
 NEXT_PUBLIC_WS_HOST=socket.espacopessoal.com
-NEXT_PUBLIC_WS_PORT=6001
+NEXT_PUBLIC_WS_PORT=443
 
-# If your WebSocket server is on a different port or domain, update accordingly:
-# NEXT_PUBLIC_WS_URL=wss://your-websocket-server.com:6001
+# Alternative: If Coolify uses a different port for SSL
+# NEXT_PUBLIC_WS_URL=wss://socket.espacopessoal.com:6001
+# NEXT_PUBLIC_WS_PORT=6001
 
 # App Configuration
 NEXT_PUBLIC_APP_NAME=EspacoPessoal Docs
@@ -26,4 +28,12 @@ NEXT_PUBLIC_ENABLE_VOICE_CHAT=false
 
 # Analytics (optional)
 # NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
-# NEXT_PUBLIC_HOTJAR_ID=xxxxxxx 
+# NEXT_PUBLIC_HOTJAR_ID=xxxxxxx
+
+# ===========================================
+# SETUP INSTRUCTIONS
+# ===========================================
+# 1. Configure SSL in Coolify first
+# 2. Update NEXT_PUBLIC_WS_URL to use wss://
+# 3. Test SSL certificate: https://socket.espacopessoal.com
+# 4. Deploy and test WebSocket connection 
