--- a/client/package.json
+++ b/client/package.json
@@ -9,17 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.23.3",
     "@hocuspocus/provider": "^3.1.9",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-menubar": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-collaboration": "^2.25.0",
     "@tiptap/extension-collaboration-caret": "^3.0.0-next.7",
     "@tiptap/react": "^2.25.0",
     "@tiptap/starter-kit": "^2.25.0",
     "@types/http-proxy": "^1.17.16",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "convex": "^1.25.2",
+    "embla-carousel-react": "^8.6.0",
     "http-proxy": "^1.18.1",
+    "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.6",
     "y-indexeddb": "^9.0.12",
     "y-prosemirror": "^1.3.7",
     "yjs": "^13.6.27"
