--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "node server.js",
-    "build": "next build",
+    "build": "bunx convex deploy --cmd 'bun run build:next'",
     "start": "next start",
     "lint": "next lint"
   },
@@ -20,9 +20,24 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-collaboration": "^2.25.0",
     "@tiptap/extension-collaboration-caret": "^3.0.0-next.7",
+    "@tiptap/extension-color": "^2.25.0",
+    "@tiptap/extension-font-family": "^2.25.0",
+    "@tiptap/extension-heading": "^2.25.0",
+    "@tiptap/extension-highlight": "^2.25.0",
+    "@tiptap/extension-link": "^2.25.0",
+    "@tiptap/extension-table": "^2.25.0",
+    "@tiptap/extension-table-cell": "^2.25.0",
+    "@tiptap/extension-table-header": "^2.25.0",
+    "@tiptap/extension-table-row": "^2.25.0",
+    "@tiptap/extension-task-item": "^2.25.0",
+    "@tiptap/extension-task-list": "^2.25.0",
+    "@tiptap/extension-text-align": "^2.25.0",
+    "@tiptap/extension-text-style": "^2.25.0",
+    "@tiptap/extension-underline": "^2.25.0",
     "@tiptap/react": "^2.25.0",
     "@tiptap/starter-kit": "^2.25.0",
     "@types/http-proxy": "^1.17.16",
+    "@types/react-color": "^3.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -32,11 +47,15 @@
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.6",
+    "tiptap-extension-resize-image": "^1.2.2",
     "y-indexeddb": "^9.0.12",
     "y-prosemirror": "^1.3.7",
-    "yjs": "^13.6.27"
+    "yjs": "^13.6.27",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "typescript": "^5",
