--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@hocuspocus/server": "^3.1.9"
+    "@hocuspocus/server": "^3.1.9",
+    "y-protocols": "^1.0.6",
+    "yjs": "^13.6.27"
   }
 }
