--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "http-proxy": "^1.18.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
+    "rc-tree": "^5.13.1",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
